# BS-Uebersetzer

./: .env.example  .gitignore  README.md  app.py  document_cleaner.py  evaluate.py  file_utils.py  llm_translate.py  llm_translate_old_token_chunking.py  main.py  nmt_translate.py  old_pyproject.toml  pyproject.toml  requirements.txt  utils.py  xml_translate.py
translator/: __init__.py  base_translator.py  config.py  docx_translator.py  pdf_translator.py  text_translator.py  utils.py
