[project]
name = "translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docling>=2.8.0",
    "langdetect>=1.0.9",
    "ollama>=0.4.2",
    "pymupdf>=1.24.14",
    "pyperclip>=1.9.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "st-theme>=1.2.3",
    "streamlit>=1.40.1",
]
